remove long constructors.